include/rp.h

typedef int bool;
typedef enum {
    RP_LOW = 0, 
    RP_HIGH 
} rp_pinState_t;
typedef enum {
    RP_TEMP_FPGA = 0,  
    RP_VCC_PINT,   
    RP_VCC_PAUX,   
    RP_VCC_BRAM,   
    RP_VCC_INT,    
    RP_VCC_AUX,    
    RP_VCC_DDR     
} rp_health_t;
typedef enum {
    RP_WAVEFORM_SINE = 0,       
    RP_WAVEFORM_SQUARE,     
    RP_WAVEFORM_TRIANGLE,   
    RP_WAVEFORM_RAMP_UP,    
    RP_WAVEFORM_RAMP_DOWN,  
    RP_WAVEFORM_DC,         
    RP_WAVEFORM_PWM,        
    RP_WAVEFORM_ARBITRARY   
} rp_waveform_t;
typedef enum {
    RP_CH_1 = 0, 
    RP_CH_2  
} rp_channel_t;
typedef enum {
    RP_TRIG_SRC_DISABLED = 0, 
    RP_TRIG_SRC_NOW,      
    RP_TRIG_SRC_CHA_PE,   
    RP_TRIG_SRC_CHA_NE,   
    RP_TRIG_SRC_CHB_PE,   
    RP_TRIG_SRC_CHB_NE,   
    RP_TRIG_SRC_EXT_PE,   
    RP_TRIG_SRC_EXT_NE,   
    RP_TRIG_SRC_AWG_PE,   
    RP_TRIG_SRC_AWG_NE    
} rp_acq_trig_src_t;
typedef enum {
    RP_TRIG_STATE_TRIGGERED = 0, 
    RP_TRIG_STATE_WAITING,   
} rp_acq_trig_state_t;
int rp_AcqGetSamplingRateHz(float* sampling_rate);
int rp_AcqSetAveraging(bool enabled);
int rp_AcqGetAveraging(bool *enabled);
int rp_AcqSetTriggerSrc(rp_acq_trig_src_t source);
int rp_AcqGetTriggerSrc(rp_acq_trig_src_t* source);
int rp_AcqGetTriggerState(rp_acq_trig_state_t* state);
int rp_AcqSetTriggerDelay(int32_t decimated_data_num);
int rp_AcqGetTriggerDelay(int32_t* decimated_data_num);
int rp_AcqSetTriggerDelayNs(int64_t time_ns);
int rp_AcqGetTriggerDelayNs(int64_t* time_ns);
int rp_AcqSetTriggerLevel(float voltage);
int rp_AcqGetTriggerLevel(float* voltage);
int rp_AcqSetTriggerHyst(float voltage);
int rp_AcqGetTriggerHyst(float* voltage);
int rp_AcqSetGain(rp_channel_t channel, rp_pinState_t state);
int rp_AcqGetGain(rp_channel_t channel, rp_pinState_t* state);
int rp_AcqGetGainV(rp_channel_t channel, float* voltage);
int rp_AcqGetWritePointer(uint32_t* pos);
int rp_AcqGetWritePointerAtTrig(uint32_t* pos);
int rp_AcqStart();
int rp_AcqReset();
uint32_t rp_AcqGetNormalizedDataPos(uint32_t pos);
int rp_AcqGetDataRaw(rp_channel_t channel,  uint32_t pos, uint32_t* size, int16_t* buffer);
int rp_AcqGetOldestDataRaw(rp_channel_t channel, uint32_t* size, int16_t* buffer);
int rp_AcqGetLatestDataRaw(rp_channel_t channel, uint32_t* size, int16_t* buffer);
int rp_AcqGetDataV(rp_channel_t channel, uint32_t pos, uint32_t* size, float* buffer);
int rp_AcqGetOldestDataV(rp_channel_t channel, uint32_t* size, float* buffer);
int rp_AcqGetLatestDataV(rp_channel_t channel, uint32_t* size, float* buffer);
int rp_AcqGetBufSize(uint32_t* size);
int rp_HealthGetValue(rp_health_t sensor, float* value);
int rp_GenReset();
int rp_GenOutEnable(rp_channel_t channel);
int rp_GenOutDisable(rp_channel_t channel);
int rp_GenOutIsEnabled(rp_channel_t channel, bool *value);
int rp_GenAmp(rp_channel_t channel, float amplitude);
int rp_GenGetAmp(rp_channel_t channel, float *amplitude);
int rp_GenOffset(rp_channel_t channel, float offset);
int rp_GenFreq(rp_channel_t channel, float frequency);
int rp_GenPhase(rp_channel_t channel, float phase);
int rp_GenWaveform(rp_channel_t channel, rp_waveform_t type);