src/System/RedPitaya/Rp.chs


-- | Gets the sampling rate for acquiring signal in a numerical form in Hz. Although this method returns a float
-- value representing the current value of the sampling rate, there is only a set of pre-defined sampling rate
-- values which can be returned.
getSamplingRateHz ::  RpMonad CFloat
getSamplingRateHz = mapr0 ( errorMap ft2) rp_AcqGetSamplingRateHz
{#fun rp_AcqGetSamplingRateHz  { alloca- `CFloat' peek* } -> `RpError' #}

-- | Enables or disables averaging of data between samples.
-- Data between samples can be averaged by setting the averaging flag in the Data decimation register.
setAvaraging ::  Bool -> RpMonad ()
setAvaraging = mapr1 ( errorMap ft1) rp_AcqSetAveraging
{#fun rp_AcqSetAveraging   {`Bool'} -> `RpError' #}

-- | Returns information if averaging of data between samples is enabled or disabled.
getAvaraging ::  RpMonad Bool
getAvaraging = mapr0 ( errorMap ft2) rp_AcqGetAveraging
{#fun rp_AcqGetAveraging   { alloca- `Bool' peekBool*} -> `RpError' #}

-- | Sets the trigger source used at acquiring signal. When acquiring is started,
-- the FPGA waits for the trigger condition on the specified source and when the condition is met, it
-- starts writing the signal to the buffer.
setTriggerSrc :: TriggerSource -> RpMonad ()
setTriggerSrc = mapr1 ( errorMap ft1) rp_AcqSetTriggerSrc
{#fun rp_AcqSetTriggerSrc {`TriggerSource'} -> `RpError' #}

-- | Gets the trigger source used at acquiring signal.
getTriggerSrc :: RpMonad TriggerSource
getTriggerSrc = mapr0 ( errorMap ft2) rp_AcqGetTriggerSrc
{#fun rp_AcqGetTriggerSrc {alloca- `TriggerSource' peekEnum*} -> `RpError' #}

-- | Returns the trigger state. Either it is waiting for a trigger to happen, or it has already been triggered.
-- By default it is in the triggered state, which is treated the same as disabled.
getTriggerState :: RpMonad TriggerState
getTriggerState = mapr0 ( errorMap ft2) rp_AcqGetTriggerState
{#fun rp_AcqGetTriggerState {alloca- `TriggerState' peekEnum*} -> `RpError' #}

-- | Sets the number of decimated data after trigger written into memory
setTriggerDelay :: Integer -> RpMonad ()
setTriggerDelay = mapr1 ( errorMap ft1) rp_AcqSetTriggerDelay
{#fun rp_AcqSetTriggerDelay  { fromIntegral `Integer' } -> `RpError' #}

-- | Returns current number of decimated data after trigger written into memory.
getTriggerDelay ::  RpMonad Integer
getTriggerDelay = mapr0 ( errorMap ft2) rp_AcqGetTriggerDelay
{#fun rp_AcqGetTriggerDelay { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Sets the amount of decimated data in nanoseconds after trigger written into memory.
setTriggerDelayNs ::  Integer -> RpMonad ()
setTriggerDelayNs = mapr1 ( errorMap ft1) rp_AcqSetTriggerDelayNs
{#fun rp_AcqSetTriggerDelayNs { fromIntegral `Integer'  } -> `RpError' #}

-- | Returns the current amount of decimated data in nanoseconds after trigger written into memory.
getTriggerDelayNs ::  RpMonad Integer
getTriggerDelayNs = mapr0 ( errorMap ft2) rp_AcqGetTriggerDelayNs
{#fun rp_AcqGetTriggerDelayNs { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Sets the trigger threshold value in volts. Makes the trigger when ADC value crosses this value.
setTriggerLevel ::  CFloat -> RpMonad ()
setTriggerLevel = mapr1 ( errorMap ft1) rp_AcqSetTriggerLevel
{#fun rp_AcqSetTriggerLevel { `CFloat' } -> `RpError' #}

-- | Gets currently set trigger threshold value in volts
getTriggerLevel ::  RpMonad CFloat
getTriggerLevel = mapr0 ( errorMap ft2) rp_AcqGetTriggerLevel
{#fun rp_AcqGetTriggerLevel { alloca- `CFloat' peek* } -> `RpError' #}

-- | Sets the trigger threshold hysteresis value in volts.
-- Value must be outside to enable the trigger again.
setTriggerLevelHyst ::  CFloat -> RpMonad ()
setTriggerLevelHyst = mapr1 ( errorMap ft1) rp_AcqSetTriggerHyst
{#fun rp_AcqSetTriggerHyst { `CFloat' } -> `RpError' #}

-- | Gets currently set trigger threshold hysteresis value in volts
getTriggerLevelHyst :: RpMonad CFloat
getTriggerLevelHyst = mapr0 ( errorMap ft2) rp_AcqGetTriggerHyst
{#fun rp_AcqGetTriggerHyst { alloca- `CFloat' peek* } -> `RpError' #}

-- | Sets the acquire gain state. The gain should be set to the same value as it is set on the Red Pitaya
setAcqGain :: Channel -> PinState -> RpMonad ()
setAcqGain = mapr2 ( errorMap ft1) rp_AcqSetGain
{#fun rp_AcqSetGain { `Channel' , `PinState' } -> `RpError' #}

-- | Returns the currently set acquire gain state in the library. It may not be set to the same value as
-- it is set on the Red Pitaya hardware by the LV/HV gain jumpers. LV = 1V; HV = 20V.
getAcqGain :: Channel -> RpMonad PinState
getAcqGain = mapr1 ( errorMap ft2) rp_AcqGetGain
{#fun rp_AcqGetGain { `Channel' , alloca- `PinState' peekEnum* } -> `RpError' #}

-- | Returns the currently set acquire gain in the library. It may not be set to the same value as
-- it is set on the Red Pitaya hardware by the LV/HV gain jumpers. Returns value in Volts.
getAcqGainV :: Channel -> RpMonad CFloat
getAcqGainV = mapr1 ( errorMap ft2) rp_AcqGetGainV
{#fun rp_AcqGetGainV { `Channel' , alloca- `CFloat' peek* } -> `RpError' #}

-- | Returns current position of ADC write pointer.
getAcqWritePointer :: RpMonad Integer
getAcqWritePointer = mapr0 ( errorMap ft2) rp_AcqGetWritePointer
{#fun rp_AcqGetWritePointer { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Returns position of ADC write pointer at time when trigger arrived.
getAcqWritePointerAtTrg :: RpMonad Integer
getAcqWritePointerAtTrg = mapr0 ( errorMap ft2) rp_AcqGetWritePointerAtTrig
{#fun rp_AcqGetWritePointerAtTrig { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Starts the acquire. Signals coming from the input channels are acquired and written into memory.
acqStart :: RpMonad ()
acqStart = mapr0 ( errorMap ft1) rp_AcqStart
{#fun rp_AcqStart {} -> `RpError' #}

-- | Resets the acquire writing state machine.
acqReset :: RpMonad ()
acqReset = mapr0 ( errorMap ft1) rp_AcqReset
{#fun rp_AcqReset {} -> `RpError' #}


-- | Normalizes the ADC buffer position. Returns the modulo operation of ADC buffer size...
getNormalisedDataPosition :: Integer -> RpMonad Integer
getNormalisedDataPosition = liftIO . rp_AcqGetNormalizedDataPos
{#fun rp_AcqGetNormalizedDataPos { fromIntegral `Integer' } ->  `Integer' fromIntegral #}

getPosSizeBufferHelper :: (Storable a) => (CInt -> (CUInt -> ((Ptr CUInt) -> ((Ptr a) -> (IO CInt))))) -> Channel -> Int -> Int -> IO ( RpError , [a])
getPosSizeBufferHelper ffiFunc chan pos size = allocaArray  (fromIntegral size)  $
    \bufptr -> alloca $
        \sizeptr ->  do
            let echan  = fromIntegral $ fromEnum chan
            let ipos = fromIntegral pos
            err <- ffiFunc echan ipos sizeptr bufptr
            if (err /= 0) then
                do
                    len <- peek  sizeptr
                    arr <- peekArray (fromIntegral len) bufptr
                    return ( Ok , arr)
            else return ( toEnum $ fromIntegral err , [])

getSizeBufferHelper :: (Storable a) => (CInt -> Ptr CUInt -> Ptr a -> IO CInt) -> Int -> Channel -> IO ( RpError , [a])
getSizeBufferHelper ffiFunc allocSize chan = allocaArray  allocSize $
    \bufptr -> alloca $
        \sizeptr ->  do
            let echan  = fromIntegral $ fromEnum chan
            _ <- poke sizeptr (fromIntegral allocSize)
            err <- ffiFunc echan sizeptr bufptr
            if (err /= 0) then
                do
                    len <- peek  sizeptr
                    arr <- peekArray (fromIntegral len) bufptr
                    return ( Ok , arr)
            else return ( toEnum $ fromIntegral err , [])


-- | get raw ADC data from channel passing position and size
getAckDataRaw :: Channel -> Int -> Int -> RpMonad [CShort]
getAckDataRaw = mapr3 ( errorMap ft2) $ getPosSizeBufferHelper {#call rp_AcqGetDataRaw#}

-- | get  ADC data Voltage from channel passing position and size
getAckDataV :: Channel -> Int -> Int -> RpMonad [CFloat]
getAckDataV = mapr3 ( errorMap ft2) $ getPosSizeBufferHelper {#call rp_AcqGetDataV#}

-- | Returns the ADC buffer in raw units from the oldest sample to the newest one.
-- First parameter is maximal length of returned data (how large buffer to allocate)
getAckOldestDataRaw :: Int -> Channel ->  RpMonad [CShort]
getAckOldestDataRaw = mapr2 ( errorMap ft2) $ getSizeBufferHelper {#call rp_AcqGetOldestDataRaw#}

-- | Returns the ADC buffer in raw units from the latest
-- First parameter is maximal length of returned data (how large buffer to allocate)
getAckLatestDataRaw :: Int -> Channel ->  RpMonad [CShort]
getAckLatestDataRaw = mapr2 ( errorMap ft2) $ getSizeBufferHelper {#call rp_AcqGetLatestDataRaw#}

-- | Returns the ADC buffer in volts from the oldest sample to the newest one.
-- First parameter is maximal length of returned list (how large buffer to allocate)
getAckOldestDataV :: Int -> Channel ->  RpMonad [CFloat]
getAckOldestDataV = mapr2 ( errorMap ft2) $ getSizeBufferHelper {#call rp_AcqGetOldestDataV#}

-- | Returns the ADC buffer in volts from the latest
-- First parameter is maximal length of returned list (how large buffer to allocate)
getAckLatestDataV :: Int -> Channel ->  RpMonad [CFloat]
getAckLatestDataV = mapr2 ( errorMap ft2) $  getSizeBufferHelper {#call rp_AcqGetLatestDataV#}

-- | Returns size of acquistion buffer
getAcqBufSize :: RpMonad Integer
getAcqBufSize = mapr0 ( errorMap ft2) rp_AcqGetBufSize
{#fun rp_AcqGetBufSize { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Gets data about system health
getHealthValue :: Health -> RpMonad CFloat
getHealthValue = mapr1 ( errorMap ft2) rp_HealthGetValue
{#fun rp_HealthGetValue { `Health' ,  alloca- `CFloat' peek* } -> `RpError' #}

-- | Sets generate to default values.
generatorReset ::  RpMonad ()
generatorReset = mapr0 ( errorMap ft1) rp_GenReset
{#fun rp_GenReset {} -> `RpError' #}

-- | Enables output
generatorOutEnable ::  Channel -> RpMonad ()
generatorOutEnable = mapr1 ( errorMap ft1) rp_GenOutEnable
{#fun rp_GenOutEnable {`Channel'} -> `RpError' #}

-- | Disables output
generatorOutDisable ::  Channel -> RpMonad ()
generatorOutDisable = mapr1 ( errorMap ft1) rp_GenOutDisable
{#fun rp_GenOutDisable {`Channel'} -> `RpError' #}

-- | Gets value `True` if channel is enabled otherwise return `False`
generatorOutIsEnabled ::   Channel -> RpMonad Bool
generatorOutIsEnabled = mapr1 ( errorMap ft2) rp_GenOutIsEnabled
{#fun rp_GenOutIsEnabled {`Channel', alloca- `Bool' peekBool*} -> `RpError' #}

-- | Sets channel signal peak to peak amplitude.
generatorAmp ::   Channel -> CFloat -> RpMonad ()
generatorAmp = mapr2 ( errorMap ft1) rp_GenAmp
{#fun rp_GenAmp {`Channel' , `CFloat' } -> `RpError' #}

-- | gets channel signal peak to peak amplitude
getGeneratorAmp ::   Channel -> RpMonad CFloat
getGeneratorAmp = mapr1 ( errorMap ft2) rp_GenGetAmp
{#fun rp_GenGetAmp {`Channel' , alloca- `CFloat' peek* } -> `RpError' #}


-- | Sets DC offset of the signal. signal = signal + DC_offset.
setGeneratorOffset ::   Channel -> CFloat -> RpMonad ()
setGeneratorOffset = mapr2 ( errorMap ft1) rp_GenOffset
{#fun rp_GenOffset {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets channel signal frequency.
generatorFrequency ::   Channel -> CFloat -> RpMonad ()
generatorFrequency = mapr2 ( errorMap ft1) rp_GenFreq
{#fun rp_GenFreq {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets channel signal phase. This shifts the signal in time.
generatorPhase ::   Channel -> CFloat -> RpMonad ()
generatorPhase = mapr2 ( errorMap ft1) rp_GenPhase
{#fun rp_GenPhase {`Channel' , `CFloat' } -> `RpError' #}


-- | Sets channel signal phase. This shifts the signal in time.
generatorWaveForm ::   Channel -> Waveform -> RpMonad ()
generatorWaveForm = mapr2 ( errorMap ft1) rp_GenWaveform
{#fun rp_GenWaveform  {`Channel' , `Waveform' } -> `RpError' #}


setBufferHelper :: (Storable a,Integral i) => (Ptr a -> i -> IO r) -> [a] -> IO r
setBufferHelper fun xs = withArrayLen xs (\i p -> fun p (fromIntegral i))
